--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,6 +30,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
+      - run: ls
+        
+      - run: ls
+        working-directory: ./source
+
       - run: npm install
         working-directory: ./source
 
