--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,6 +32,14 @@ jobs:
       - run: npm install
         working-directory: ./source
 
+      - name: test
+        run: ls -l ./quartz/bootstrap-cli.mjs
+        working-directory: ./source
+
+      - name: test
+        run: npx quartz
+        working-directory: ./source
+
       - name: Ensure Quartz builds, check bundle info
         run: npx quartz build --bundleInfo
         working-directory: ./source
