--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,11 @@ jobs:
 
       - run: npm install
         working-directory: ./source
-        
+
+      - name: chmod
+        run: chmod +x ./quartz/bootstrap-cli.mjs
+        working-directory: ./source
+
       - name: Ensure Quartz builds, check bundle info
         run: npx quartz build --bundleInfo
         working-directory: ./source
